@@ -1,10 +1,11 @@
 #!/usr/bin/env bash
 set -euo pipefail
 
-JAVAFX_LIB="/Users/nimasaeidi/Desktop/M/JavaFX/javafx-sdk-26.0.1/lib"
+JAVAFX_LIB="$(cd "$(dirname "$0")" && pwd)/lib"
 
 "$(dirname "$0")/build.sh"
 java \
+  --enable-native-access=javafx.graphics \
   --module-path "$JAVAFX_LIB" \
   --add-modules javafx.controls \
   -cp bin \
